# accelerated-data-driven-pde-discovery

./: .gitignore  README.md  install.sh  main.py  pyproject.toml
configs/: all_ic_types_test.yaml  br-10-rms2-conv-metal-2layer.yaml  br-11-rms2-conv-metal-3layer.yaml  br-16-rms2-25step-2layer-highkq.yaml  br-17-rms2-1step-2layer-lowkshot.yaml  br-18-rms2-1step-2layer-metal.yaml  br-18-rms3-1step-2layer.yaml  br-19-rms2-1step-2layer-metal-lowkshot.yaml  br-2-rms2-14step-2layer.yaml  br-2-rms2-2layer.yaml  br-21-rms3-1step-2layer-metal-lowkshot.yaml  br-22-rms3-14step-2layer.yaml  br-23-rms3-14step-2layer-lowkshot.yaml  br-28-rms3-25step-2layer-metal.yaml  br-3-rms2-1step-2layer.yaml  br-4-rms2-3layer.yaml  br-5-rms2-1step-3layer.yaml  br-6-rms2-conv-2layer.yaml  br-7-rms2-conv-3layer.yaml  br-8-rms2-metal-2layer.yaml  br-9-rms2-metal-3layer.yaml  br-eksperimentasyon-1.yaml  br-eksperimentasyon-2.yaml  br_test-1.yaml  br_test-2.yaml  br_train-1.yaml  br_train-2.yaml  br_val-1.yaml  br_val-2.yaml  brusselator_test.yaml  comprehensive_validation.yaml  dipole.yaml  eksperimentasyon-1.yaml  experiment_template.yaml  fhn-eksperimentasyon-1.yaml  fhn_test-1.yaml  fhn_train-1.yaml  fhn_val-1.yaml  gaussian_all_types_test.yaml  gaussian_sum_test.yaml  (+44 more)
docs/: concepts_explained_simply.md  dataset_generator_guide.md  finite_differences_and_ics.md  navier_stokes_notes.md  project_plan_amendments_1.md
scripts/: all_pde_datasets_analyse.sh  all_pde_experiments_run.sh  compare_coefficient_recovery.py  dataset_analyser.py  evaluate.py  feature_distribution_resample.py  inject_noise.py  (+274 more)
(+1064 files in other folders)
