[project]
name = "ai-chaos-theory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "debugpy>=1.8.20",
    "dedalus",
    "h5py>=3.15.1",
    "higher>=0.2.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "pytorch-finufft",
    "cufinufft>=2.4.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
